tests/error/modifier_errors/flag_control_qubit1.err
Error: Control constraint violation (at $FILE:12:12)
   | 
10 |     q = qubit()
11 |     with control(q):
12 |         p = qubit()
   |             ^^^^^^^ This function cannot be called in a control context

Note: The function allocates qubits, which is not allowed in a control context

Guppy compilation failed due to 1 previous error
